--- a/ParkyWeb/ParkyWeb.csproj
+++ b/ParkyWeb/ParkyWeb.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FakeItEasy" Version="7.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.0.0" />
+    <PackageReference Include="RazorEngine" Version="3.10.0" />
+  </ItemGroup>
+
 </Project>
