--- a/ParkyWeb/ParkyWeb.csproj
+++ b/ParkyWeb/ParkyWeb.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="7.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RazorEngine" Version="3.10.0" />
   </ItemGroup>
 
