--- a/ParkyAPI/appsettings.json
+++ b/ParkyAPI/appsettings.json
@@ -10,7 +10,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AppSettings": {
+  "ApplicationSettings": {
     "Secret":  "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
   }
 }
